Instanciate browsers with AOP