@@ -5,18 +5,38 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <dependencies>
-  	<dependency>
-	    <groupId>org.seleniumhq.selenium</groupId>
-	    <artifactId>selenium-java</artifactId>
-	    <version>4.1.3</version>
+ <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+	<dependency>
+		<groupId>org.seleniumhq.selenium</groupId>
+		<artifactId>selenium-java</artifactId>
+		<version>4.17.0</version>
 	</dependency>
+
 	
- <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 	<dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
 	    <version>7.5</version>
 	    <scope>test</scope>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.22.1</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-api</artifactId>
+	    <version>2.22.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-slf4j-impl</artifactId>
+	    <version>2.22.1</version>
 	</dependency>
 	<dependency>
 	    <groupId>com.beust</groupId>
@@ -29,10 +49,15 @@
         <artifactId>allure-testng</artifactId>
         <version>2.20.1</version>
     </dependency>
-	<dependency>
-	    <groupId>io.github.bonigarcia</groupId>
-	    <artifactId>webdrivermanager</artifactId>
-	    <version>5.1.1</version>
+    <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>1.9.21</version>
+    </dependency>
+    <dependency>
+	    <groupId>org.aspectj</groupId>
+	    <artifactId>aspectjrt</artifactId>
+	    <version>1.9.21</version>
 	</dependency>
   </dependencies>
   
@@ -43,25 +68,29 @@
 	        <artifactId>maven-compiler-plugin</artifactId>
 	        <version>3.8.1</version>
 	        <configuration>
-				<release>11</release>
+				<release>17</release>
 	        </configuration>
 	    </plugin>
 	    <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+
             <configuration>
                 <suiteXmlFiles>
-                    <suiteXmlFile>TestNG.xml</suiteXmlFile>
+                    <suiteXmlFile>testng.xml</suiteXmlFile>
                 </suiteXmlFiles>
                 <argLine>
-                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.6/aspectjweaver-1.9.6.jar"
+					--add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.util=ALL-UNNAMED
+                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.21/aspectjweaver-1.9.21.jar"
                 </argLine>
             </configuration>
             <dependencies>
                 <dependency>
                     <groupId>org.aspectj</groupId>
                     <artifactId>aspectjweaver</artifactId>
-                    <version>1.9.6</version>
+                    <version>1.9.21</version>
                 </dependency>
             </dependencies>
         </plugin>
